trunk/Archive2/d9/26c8fb3f3f4de6/output
main.cpp:4:2: error: C++ requires a type specifier for all declarations
*ptr = 2;
~^
1 error generated.
